--- a/productDetails.html
+++ b/productDetails.html
@@ -128,6 +128,7 @@
                              <a href="#swym-wishlist" class="shopping-bag">
                                <i aria-hidden="true" focusable="false" role="presentation" class="fa fa-shopping-bag"></i>
                              </a>
+                               <span id="itemCount"></span>
                           </div>
                        </div>
                     </form>
@@ -544,7 +545,9 @@
          <div class="row ">
             <aside class="col-sm-6 col-md-6 ">
                <article class="preview ">
+
                   <div class="row ">
+
                      <div class="col-sm-3 col-md-3">
                         <ul class="preview-thumbnail nav nav-tabs" role="tablist">
                            <li class="active"><a data-target="#pic-1" data-toggle="tab"><img src="images/items/6.jpg"/></a></li>
@@ -554,6 +557,7 @@
                            <li><a data-target="#pic-5" data-toggle="tab"> <img src="images/items/10.jpg"  /></a></li>
                         </ul>
                      </div>
+
                      <div class="col-sm-9 col-md-9">
                         <div class="preview-pic tab-content" id="tabs">
                            <div class="tab-pane active" id="pic-1"><img src="images/items/6.jpg" class="img-responsive"/></div>
@@ -563,7 +567,9 @@
                            <div class="tab-pane" id="pic-5"><img src="images/items/10.jpg" class="img-responsive"/></div>
                         </div>
                      </div>
+
                   </div>
+
                </article>
             </aside>
             <aside class="col-sm-6 col-md-6">
@@ -623,7 +629,7 @@
                         <a href="payment.html" class="btn  btn-info form-control"> Buy Now </a>
                      </div>
                      <div class="col-md-4 btn-buy">
-                        <a href="#" class="btn  btn-info form-control"> <i class="fa fa-shopping-cart"></i> Add to cart </a>
+                        <a href="#" id="addToCart"class="btn btn-info form-control"> <i class="fa fa-shopping-cart"></i> Add to cart </a>
                      </div>
                   </div>
                </article>
@@ -679,5 +685,6 @@
       </footer>
       <!-- **************************************************************  -->
       <script src="js/app.js"></script>
+      <script src="js/incrementCart.js"></script>
    </body>
 </html>
