--- a/products.html
+++ b/products.html
@@ -682,13 +682,20 @@
                            <div class="image-liquid image-holder--original" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Jeans_BW_2_(3213391837).jpg/543px-Jeans_BW_2_(3213391837).jpg')">
                            </div>
                         </div>
+
                         <div class="product-description">
                            <!-- title -->
-                           <h1 class="product-description__title">
+ <div class="row">
+                           <h1 class="col-sm-8 product-description__title">
                               <a href="productDetails.html">
                               Adidas Originals
                               </a>
                            </h1>
+                           <div class="col-sm-4 fav-product text-right">
+                              <i class="heart fa fa-heart-o"></i>
+                           </div>
+</div>
+
                            <!-- category and price -->
                            <div class="row">
                               <div class="col-sm-8 product-description__category secondary-text">
@@ -741,11 +748,16 @@
                         </div>
                         <div class="product-description">
                            <!-- title -->
-                           <h1 class="product-description__title">
+                           <div class="row">
+                           <h1 class="col-sm-8 product-description__title">
                               <a href="productDetails.html">
                               Adidas Originals
                               </a>
                            </h1>
+                           <div class="col-sm-4 fav-product text-right">
+                              <i class="heart fa fa-heart-o"></i>
+                           </div>
+                         </div>
                            <!-- category and price -->
                            <div class="row">
                               <div class="col-sm-8 product-description__category secondary-text">
@@ -798,11 +810,16 @@
                         </div>
                         <div class="product-description">
                            <!-- title -->
-                           <h1 class="product-description__title">
+                           <div class="row">
+                           <h1 class="col-sm-8 product-description__title">
                               <a href="productDetails.html">
                               Adidas Originals
                               </a>
                            </h1>
+                           <div class="col-sm-4 fav-product text-right">
+                              <i class="heart fa fa-heart-o"></i>
+                           </div>
+                            </div>
                            <!-- category and price -->
                            <div class="row">
                               <div class="col-sm-8 product-description__category secondary-text">
@@ -855,11 +872,16 @@
                         </div>
                         <div class="product-description">
                            <!-- title -->
-                           <h1 class="product-description__title">
+                           <div class="row">
+                           <h1 class="col-sm-8 product-description__title">
                               <a href="productDetails.html">
                               Adidas Originals
                               </a>
                            </h1>
+                           <div class="col-sm-4 fav-product text-right">
+                              <i class="heart fa fa-heart-o"></i>
+                           </div>
+                            </div>
                            <!-- category and price -->
                            <div class="row">
                               <div class="col-sm-8 product-description__category secondary-text">
@@ -911,11 +933,16 @@
                         </div>
                         <div class="product-description">
                            <!-- title -->
-                           <h1 class="product-description__title">
+                           <div class="row">
+                           <h1 class="col-sm-8 product-description__title">
                               <a href="productDetails.html">
                               Adidas Originals
                               </a>
                            </h1>
+                           <div class="col-sm-4 fav-product text-right">
+                              <i class="heart fa fa-heart-o"></i>
+                           </div>
+                            </div>
                            <!-- category and price -->
                            <div class="row">
                               <div class="col-sm-8 product-description__category secondary-text">
@@ -967,11 +994,16 @@
                         </div>
                         <div class="product-description">
                            <!-- title -->
-                           <h1 class="product-description__title">
+                           <div class="row">
+                           <h1 class="col-sm-8 product-description__title">
                               <a href="productDetails.html">
                               Adidas Originals
                               </a>
                            </h1>
+                           <div class="col-sm-4 fav-product text-right">
+                              <i class="heart fa fa-heart-o"></i>
+                           </div>
+                            </div>
                            <!-- category and price -->
                            <div class="row">
                               <div class="col-sm-8 product-description__category secondary-text">
@@ -1023,11 +1055,16 @@
                         </div>
                         <div class="product-description">
                            <!-- title -->
-                           <h1 class="product-description__title">
+                           <div class="row">
+                           <h1 class="col-sm-8 product-description__title">
                               <a href="#">
                               Adidas Originals
                               </a>
                            </h1>
+                           <div class="col-sm-4 fav-product text-right">
+                              <i class="heart fa fa-heart-o"></i>
+                           </div>
+                            </div>
                            <!-- category and price -->
                            <div class="row">
                               <div class="col-sm-8 product-description__category secondary-text">
@@ -1079,11 +1116,16 @@
                         </div>
                         <div class="product-description">
                            <!-- title -->
-                           <h1 class="product-description__title">
+                           <div class="row">
+                           <h1 class="col-sm-8 product-description__title">
                               <a href="#">
                               Adidas Originals
                               </a>
                            </h1>
+                           <div class="col-sm-4 fav-product text-right">
+                              <i class="heart fa fa-heart-o"></i>
+                           </div>
+                            </div>
                            <!-- category and price -->
                            <div class="row">
                               <div class="col-sm-8 product-description__category secondary-text">
@@ -1135,11 +1177,16 @@
                         </div>
                         <div class="product-description">
                            <!-- title -->
-                           <h1 class="product-description__title">
+                           <div class="row">
+                           <h1 class="col-sm-8 product-description__title">
                               <a href="#">
                               Adidas Originals
                               </a>
                            </h1>
+                           <div class="col-sm-4 fav-product text-right">
+                              <i class="heart fa fa-heart-o"></i>
+                           </div>
+                            </div>
                            <!-- category and price -->
                            <div class="row">
                               <div class="col-sm-8 product-description__category secondary-text">
@@ -1235,5 +1282,6 @@
       </footer>
       <!-- **************************************************************  -->
       <script src="js/app.js"></script>
+      <script src="js/fav-toggle.js"></script>
    </body>
 </html>
