--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    </head>
-   <script>
-
+   <script charset='UTF-8'>
    window['adrum-start-time'] = new Date().getTime();
    (function(config){
        config.appKey = 'AD-AAB-AAK-ZPR';
@@ -22,6 +21,7 @@
        config.adrumExtUrlHttps = 'https://cdn.appdynamics.com';
        config.beaconUrlHttp = 'http://col.eum-appdynamics.com';
        config.beaconUrlHttps = 'https://col.eum-appdynamics.com';
+       config.geoResolverUrlHttp = 'http://amrgamal91.github.io';
        config.xd = {enable : true};
    })(window['adrum-config'] || (window['adrum-config'] = {}));
    if ('https:' === document.location.protocol) {
@@ -35,7 +35,6 @@
     + " type='text/javascript' charset='UTF-8'"
     + unescape('%3E%3C/script%3E'));
    }
-
    </script>
    <body>
       <!-- header -->
