--- a/payment.html
+++ b/payment.html
@@ -16,6 +16,28 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    </head>
+   <script charset='UTF-8'>
+   window['adrum-start-time'] = new Date().getTime();
+   (function(config){
+       config.appKey = 'AD-AAB-AAK-ZPR';
+       config.adrumExtUrlHttp = 'http://cdn.appdynamics.com';
+       config.adrumExtUrlHttps = 'https://cdn.appdynamics.com';
+       config.beaconUrlHttp = 'http://col.eum-appdynamics.com';
+       config.beaconUrlHttps = 'https://col.eum-appdynamics.com';
+       config.xd = {enable : true};
+   })(window['adrum-config'] || (window['adrum-config'] = {}));
+   if ('https:' === document.location.protocol) {
+       document.write(unescape('%3Cscript')
+    + " src='https://cdn.appdynamics.com/adrum/adrum-4.4.1.154.js' "
+    + " type='text/javascript' charset='UTF-8'"
+    + unescape('%3E%3C/script%3E'));
+   } else {
+       document.write(unescape('%3Cscript')
+    + " src='http://cdn.appdynamics.com/adrum/adrum-4.4.1.154.js' "
+    + " type='text/javascript' charset='UTF-8'"
+    + unescape('%3E%3C/script%3E'));
+   }
+   </script>
    <body>
      <header>
         <!-- ******************** TOP_BAR  ******************************  -->
