--- a/signUp.html
+++ b/signUp.html
@@ -1,33 +1,36 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Sign Up</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Sign up</title>
+      <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="css/signUp.css">
       <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
       <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js'></script>
    </head>
    <body>
-      <div class="text-center"> <a href="javascript:void(0);"> <img width="" src="images/logo.png" alt=""></a> </div>
+      <div class="text-center"> <a href=""> <img width="" src="images/logo.png" alt=""></a> </div>
       <div class="sign-up-Wrapper" >
          <div class="container">
             <div class="row">
-               <h1 class="col-md-4 col-md-offset-4 well signUp-title">Sign Up</h1>
+               <h1 class="col-md-6 col-md-offset-3 well signUp-title">Sign up</h1>
             </div>
             <div class="row">
-               <div class="col-md-4 col-md-offset-4 well">
+               <div class="col-md-6 col-md-offset-3 well">
                   <form action="" id="reg_form">
                      <div class="form-row ">
-                        <div class="form-group col-md-6"> <label for="firstName">First Name</label> <input type="text" class="form-control" id="firstName" placeholder="first Name" name="first_Name" > </div>
-                        <div class="form-group col-md-6"> <label for="lastName">Last Name</label> <input type="text" class="form-control" id="lastName" placeholder="last Name" name="last_Name"> </div>
+                        <div class="form-group col-md-6 "> <label for="firstName">First Name</label> <input type="text" class="form-control" id="firstName" placeholder="first Name" name="first_Name" > </div>
+                        <div class="form-group col-md-6 "> <label for="lastName">Last Name</label> <input type="text" class="form-control" id="lastName" placeholder="last Name" name="last_Name"> </div>
                      </div>
                      <div class="form-row ">
-                        <div class="form-group col-md-12"> <label for="emailAddress">Email</label> <input type="email" class="form-control" id="emailAddress" placeholder="email address" name="email"> </div>
+                        <div class="form-group col-md-12 "> <label for="emailAddress">Email</label> <input type="email" class="form-control" id="emailAddress" placeholder="email address" name="email"> </div>
                      </div>
                      <div class="form-row ">
-                        <div class="form-group col-md-12"> <label for="password">Password</label> <input type="password" class="form-control" id="password" placeholder="password" name="password"> </div>
-                        <div class="form-group col-md-12"> <label for="confirmPassword">Confirm Password</label> <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" name="confirmPassword"> </div>
+                        <div class="form-group col-md-12 "> <label for="password">Password</label> <input type="password" class="form-control" id="password" placeholder="password" name="password"> </div>
+                        <div class="form-group col-md-12 "> <label for="confirmPassword">Confirm Password</label> <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" name="confirmPassword"> </div>
                      </div>
                      <div class="form-row ">
                         <div class="form-group col-md-12 ">
@@ -41,18 +44,73 @@
                         </div>
                      </div>
                      <div class="form-row ">
-                        <div class="form-group col-md-12">
-                           <div class="form-check form-check-inline"> <input class="form-check-input" type="radio" name="inlineRadioOptions" id="maleCheckBox" value="Male"> <label class="form-check-label " for="maleCheckBox">Male </label> <input class="form-check-input" type="radio" name="inlineRadioOptions" id="femaleCheckBox" value="Female"> <label class="form-check-label " for="femaleCheckBox">Female </label> </div>
+                        <div class="form-group col-md-12 ">
+                           <div class="form-check form-check-inline">
+                             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="maleCheckBox" value="Male"> <label class="form-check-label " for="maleCheckBox">Male </label>
+                             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="femaleCheckBox" value="Female"> <label class="form-check-label " for="femaleCheckBox">Female </label> </div>
                         </div>
                      </div>
                      <div class="form-row ">
-                        <div class="form-group col-lg-12 text-center"> <button type="submit" id="btn-signUp" class="btn btn-info btn-lg btn-block">Sign Up</button> </div>
+                        <div class="form-group col-lg-12 col-md-12 text-center"> <button type="submit" id="btn-signUp" class="btn btn-info btn-lg btn-block">Sign Up</button> </div>
                      </div>
+                     <div class="hint"> Have an account ?  <a href="">login</a> </div>
                   </form>
                </div>
             </div>
          </div>
       </div>
+
+
+      <!-- ********************* Footer *********************************  -->
+      <footer class="footer">
+         <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-10 col-md-offset-1">
+               <div class="col-sm-3 col-md-3">
+                  <h5 class="title">E-Commerce</h5>
+                  <p>E-commerce website for all categories of shopping.We offer free shipping on all items and free exchange withing 14 days.</p>
+                  <ul class="social-icon">
+                     <a href="#" class="social"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                     <a href="#" class="social"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                     <a href="#" class="social"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                     <a href="#" class="social"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                  </ul>
+               </div>
+               <div class="col-sm-3 col-md-3">
+                  <h5 class="title">My Account</h5>
+                  <span class="acount-icon">
+                  <a href="aboutUs.html"><i class="fa fa-user" aria-hidden="true"></i> About us</a>
+                  <a href="#"><i class="fa fa-info-circle" aria-hidden="true"></i> Terms & Conditions</a>
+                  <a href="FAQ.html"><i class="fa fa-question-circle" aria-hidden="true"></i> FAQ</a>
+                  <a href="contactUs.html"><i class="fa fa-envelope" aria-hidden="true"></i> Contact us</a>
+                  </span>
+               </div>
+               <div class="col-sm-3 col-md-3">
+                  <div id="appIcons" class="appIcons">
+                     <h5 class="title">Download App</h5>
+                     <a href="#"><img class="img-responsive" src="images/apple.png" alt=""></a>
+                     <a href="#"><img class="img-responsive" src="images/google.png" alt=""></a>
+                  </div>
+               </div>
+               <div class="col-sm-3 col-md-3">
+                  <h5 class="title">Payment Methods</h5>
+                  <p>We accept various payment methods including cash on delivery,paypal,credit and debit cards.</p>
+                  <ul class="payment">
+                     <li><a href="#"><i class="fa fa-cc-amex" aria-hidden="true"></i></a></li>
+                     <li><a href="#"><i class="fa fa-credit-card" aria-hidden="true"></i></a></li>
+                     <li><a href="#"><i class="fa fa-paypal" aria-hidden="true"></i></a></li>
+                     <li><a href="#"><i class="fa fa-cc-visa" aria-hidden="true"></i></a></li>
+                  </ul>
+               </div>
+            </div>
+            </div>
+            <hr>
+            <div class="row text-center"> © 2018. Made by Amr Gamal.</div>
+         </div>
+      </footer>
+      <!-- **************************************************************  -->
+
+
    </body>
 <script src="js/signUpValidation.js"></script>
 
